--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -10,14 +10,14 @@ $color-background-0: #FFFFFF;
 
 
 @mixin fonty($size) {
-    font-family: 'Sumana', serif;
+    font-family:Garamond, Georgia, serif;
     font-size: $size;
     font-weight: 200;
     font-style: normal;
 }
 
 body{
-  font-family: 'Sumana', serif;
+  font-family:Garamond, Georgia, serif;
   background-color: $color-background-0;
 
   .header{
