--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,16 +8,16 @@ $color-font-0: #525252;
 $color-background-0: #FFFFFF;
 
 
+
 @mixin fonty($size) {
-    font-family: 'Sumana', serif;
+    font-family:Garamond, Georgia, serif;
     font-size: $size;
     font-weight: 200;
     font-style: normal;
 }
 
-
 body{
-  font-family: 'Sumana', serif;
+  font-family:Garamond, Georgia, serif;
   background-color: $color-background-0;
 
   .participants_table{
